# Football-Simulator

./: pyproject.toml
simulator/: app.py  data_provider.py  league.py  match.py  team.py
simulator/configs/: league.py
