[tool.poetry]
name = "league-simulator"
version = "0.1.0"
description = "Football League Simulation Project"
readme = "README.md"
packages = [{include = "simulator"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.25.1"
pandas = "^2.0.3"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
tabulate = "^0.9.0"
tzdata = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"